# hyphence

./: .gitignore  Cargo.toml  README.md  conformist.nix  flake.nix  justfile  sweatfile  version.env
docs/man.1/: hyphence.md
docs/man.7/: hyphence.md
docs/plans/: 2026-05-03-hyphence-utility.md
docs/rfcs/: 0002-content-grammar.md  0003-markl-atomic-locks.md  hyphence-content.peg
go/: default.nix  go.mod  go.sum  gomod.nix  gomod2nix.toml
go/cli_main/: cli_main.go
go/cmd/hyphence/: main.go
go/commands_hyphence/: body.go  body_test.go  format.go  format_test.go  input.go  main.go  meta.go  meta_test.go  validate.go  validate_test.go
go/hyphence/: boundary.go  canonicalize.go  coder.go  coder_fs.go  coder_metadata.go  coder_metadata_test.go  coder_to_typed_blob.go  coder_tommy.go  coder_type_map.go  consumers.go  decoder.go  document_test.go  encoder.go  encoder_type_map.go  errors.go  generic_instantiation_test.go  grammar_vectors_test.go  reader.go  rfc_conformance_test.go  rfc_vectors_reader_test.go  tommy_blob_coder.go  type_digest.go  writer.go
go/hyphence/testdata/: rfc_vectors.txt
rust/hyphence/: Cargo.toml  rustfmt.toml
rust/hyphence/src/: conformance.rs  decode.rs  document.rs  encode.rs  error.rs  lib.rs  tests.rs
rust/hyphence/testdata/: rfc_vectors.txt
zz-tests_bats/lib/: common.bash
